--- a/hospital/templates/home.html
+++ b/hospital/templates/home.html
@@ -22,6 +22,7 @@
 
    <!-- Site CSS -->
    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+   
    <!-- Colors CSS -->
    <link rel="stylesheet" href="static/css/colors.css">
    <!-- ALL VERSION CSS -->
@@ -33,7 +34,21 @@
    <!-- Modernizer for Portfolio -->
    <script src="static/js/modernizer.js"></script>
    <!-- [if lt IE 9] -->
-   
+   <style>
+  
+  .site-header .navbar-nav .nav-link {
+    color: #cbd5db;
+  }
+  
+  .site-header .navbar-nav .nav-link:hover {
+    background-color: DodgerBlue;
+  }
+  
+  .site-header .navbar-nav .nav-link.active {
+    font-weight: 500;
+  }
+  
+   </style>
    </head>
    <body class="clinic_version">
       <!-- LOADER -->
@@ -41,10 +56,10 @@
          <img class="preloader" src="static/images/loaders/heart-loading2.gif" alt="">
       </div>
       <!-- END LOADER -->
-      <header>
+      <header class="site-header">
          <div class="header-top wow fadeIn">
             <div class="container">
-               <a class="navbar-brand" href="home.html"><img src="static/images/logo.png" alt="image"></a>
+               <a class="navbar-brand" href="{{ url_for('home') }}"><img src="static/images/logo.png" alt="image"></a>
                <div class="right-header">
                   <div class="header-info">
                      <div class="info-inner">
@@ -63,34 +78,35 @@
                </div>
             </div>
          </div>
-         <div class="header-bottom wow fadeIn">
-            <div class="container">
-               <nav class="main-menu">
-                  <div class="navbar-header">
-                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i class="fa fa-bars" aria-hidden="true"></i></button>
-                  </div>
-				  
-                  <div id="navbar" class="navbar-collapse collapse">
-                     <ul class="nav navbar-nav">
-                        <li><a class="active" href="{{ url_for('home') }}">Home</a></li>
-                        <li><a data-scroll href="#about">About us</a></li>
-                        <li><a data-scroll href="#service">Services</a></li>
-                        <li><a data-scroll href="#doctors">Doctors</a></li>
-                        <li><a data-scroll href="#price">Price</a></li>
-						      <li><a data-scroll href="#testimonials">Testimonials</a></li>
-                        <li><a data-scroll href="#getintouch">Contact</a></li>
-                        <li><a data-scroll href="{{ url_for('nearby_map') }}">Nearby Medical Stores</a></li>
-                        {% if current_user.is_authenticated %}
-                        <li><a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a></li>
-                        <li><a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a></li>
-                        {% else %}
-                        <li><a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a></li>
-                        <li><a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a></li>
-                        {% endif %}
-                     </ul>
-                  </div>
-               </nav>
-               <div class="serch-bar">
+            <nav class="navbar navbar-expand-md navbar-dark" style="background:#2895f1;">
+            <div class="container" >
+               <a class="navbar-brand mr-4" style="font-size: 25px;" href="/">Life Care</a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navbarToggle">
+               <div class="navbar-nav mr-auto" style="font-size: 18px;list-style-type: none; margin:0; padding: 0; overflow: hidden; background-color:#2895f1;">
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('home') }}"> Home </a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#about">About Us</a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#service">Services</a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#doctors">Doctors </a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#price">Price </a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 140px" href="#testimonials">Testimonials </a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#getintouch">Contact us </a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 120px" href="{{ url_for('nearby_map') }}">Pharmacy near me</a>
+                  
+                  {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('account') }}">Account </a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('logout') }}">Logout</a>
+                  {% else %}
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('login') }}">Login</a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="{{ url_for('register') }}">Register</a>
+                  {% endif %}
+               </div>
+               </div>
+            </div>
+            </nav>
+               <!-- <div class="serch-bar">
                   <div id="custom-search-input">
                      <div class="input-group col-md-12">
                         <input type="text" class="form-control input-lg" placeholder="Search" />
@@ -101,7 +117,7 @@
                         </span>
                      </div>
                   </div>
-               </div>
+               </div> -->
             </div>
          </div>
       </header>
