Updated successfully on 08-05-2020

--- a/hospital/templates/home.html
+++ b/hospital/templates/home.html
@@ -90,7 +90,7 @@
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#about">About Us</a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#service">Services</a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#doctors">Doctors </a>
-                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#price">Price </a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 140px" href="{{ url_for('new_appointment') }}">Appointment</a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 140px" href="#testimonials">Testimonials </a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#getintouch">Contact us </a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 120px" href="{{ url_for('nearby_map') }}">Pharmacy near me</a>
@@ -448,7 +448,7 @@
         </div><!-- end container -->
     </div>
 	  
-	  <div id="price" class="section pr wow fadeIn" style="background-image:url('static/images/price-bg.png');">
+	  <!-- <div id="price" class="section pr wow fadeIn" style="background-image:url('static/images/price-bg.png');">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -514,9 +514,9 @@
                               </div>
                            </div>
                         </div>
-                        <!-- end row -->
+                        
                      </div>
-                     <!-- end pane -->
+                     
                      <div class="tab-pane fade" id="tab2">
                         <div class="row text-center">
                            <div class="col-md-6">
@@ -561,16 +561,16 @@
                               </div>
                            </div>
                         </div>
-                        <!-- end row -->
+                    
                      </div>
-                     <!-- end pane -->
+                
                   </div>
-                  <!-- end content -->
+                 
                </div>
-               <!-- end col -->
+               
             </div>
          </div>
-      </div>
+      </div> -->
 	  
 	  <!-- end doctor section -->
 	  
