--- a/hospital/templates/home.html
+++ b/hospital/templates/home.html
@@ -90,9 +90,9 @@
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#about">About Us</a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#service">Services</a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#doctors">Doctors </a>
-                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 140px" href="{{ url_for('new_appointment') }}">Appointment</a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 140px" href="{{ url_for('new_appointment') }}">New Appointment</a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 140px" href="#testimonials">Testimonials </a>
-                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 110px" href="#getintouch">Contact us </a>
+                  <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 150px" href="{{ url_for('appointment_history', username=current_user.username) }}">Apoointment History</a>
                   <a class="nav-item nav-link" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; width: 120px" href="{{ url_for('nearby_map') }}">Pharmacy near me</a>
                   
                   {% if current_user.is_authenticated %}
