--- a/hospital/templates/doc_booked_appointments.html
+++ b/hospital/templates/doc_booked_appointments.html
@@ -1,28 +1,130 @@
-{% extends "layout.html" %}
-{% block content %}
-    <h3 class="mb-4">Appointments booked with {{ doctor.username }} ({{ appointments_with.total }})</h3>
-    {% for appointment in appointments_with.items %}
-        <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + appointment.doctor.image_file) }}">
-          <div class="media-body">
-            <div class="article-metadata">
-              <p class="mr-2">{{ appointment.doctor.username }}</p> 
-              <small class="text-muted">{{ appointment.booked_on.strftime('%Y-%m-%d') }}</small>
+<!DOCTYPE html>
+<html>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Site Icons -->
+   <link rel="shortcut icon" href="static/images/fevicon.ico.png" type="image/x-icon" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    
+    {% if title %}
+        <title>Hospital - {{ title }}</title>
+    {% else %}
+        <title>Hospital</title>
+    {% endif %}
+    <style>
+      table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+      }
+      
+      td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
+      
+      tr:nth-child(even) {
+        background-color: #dddddd;
+      }
+      </style>
+</head>
+<body>
+    <header class="site-header">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+        <div class="container">
+          <a class="navbar-brand mr-4" href="/">Hospital</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggle">
+            <div class="navbar-nav mr-auto">
+              <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
             </div>
-            <!-- <h4><a class="article-title" href="{{ url_for('appointment', appointment_id=appointment.id) }}">Click here for update or delete</a></h4> -->
-            <p class="article-content">Patient: {{ appointment.user.username }}</p>
+            <!-- Navbar Right Side -->
+            <div class="navbar-nav">
+              {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+              {% endif %}
+            </div>
           </div>
-        </article>
-    {% endfor %}
-    {% for page_num in appointments_with.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-      {% if page_num %}
-        {% if appointments_with.page == page_num %}
-          <a class="btn btn-info mb-4" href="{{ url_for('doc_appointment_history', username=doctor.username, page=page_num) }}">{{ page_num }}</a>
-        {% else %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('doc_appointment_history', username=doctor.username, page=page_num) }}">{{ page_num }}</a>
-        {% endif %}
-      {% else %}
-        ...
-      {% endif %}
-    {% endfor %}
-{% endblock content %}
+        </div>
+      </nav>
+    </header>
+    <main role="main" class="container">
+      <div class="row">
+        <div class="col-md-8">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}        
+          <h3 class="mb-4">Appointments booked with {{ doctor.username }} ({{ appointments_with.total }})</h3>   
+            <table>
+                <tr>
+                  <th>Patient</th>
+                  <th>Booked on</th>
+                  <th>Booked for</th>
+                  <th>E-prescription</th>
+                </tr>
+            {% for appointment in appointments_with.items %}
+                <tr>
+                    <td>{{ appointment.user.username }}</td>
+                    <td>{{ appointment.booked_on.strftime('%Y-%m-%d') }}</td>
+                    <td>{{ appointment.booked_for.strftime('%Y-%m-%d') }}</td>
+                    <td><p>Click here</p></td> 
+                </tr>
+            {% endfor %}
+            </table>    
+            {% for page_num in appointments_with.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+            {% if page_num %}
+                {% if appointments_with.page == page_num %}
+                <a class="btn btn-info mb-4" href="{{ url_for('doc_appointment_history', username=doctor.username, page=page_num) }}">{{ page_num }}</a>
+                {% else %}
+                <a class="btn btn-outline-info mb-4" href="{{ url_for('doc_appointment_history', username=doctor.username, page=page_num) }}">{{ page_num }}</a>
+                {% endif %}
+            {% else %}
+                ...
+            {% endif %}
+            {% endfor %}
+            </div>
+            <div class="col-md-4">
+            <div class="content-section">
+                <h3>Our Sidebar</h3>
+                <p class='text-muted'>Check these out!
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-light">24x7 Ambulance</li>
+                    <li class="list-group-item list-group-item-light">Announcements</li>
+                    <li class="list-group-item list-group-item-light">Calendars</li>
+                    <li class="list-group-item list-group-item-light">etc</li>
+                </ul>
+                </p>
+            </div>
+            </div>
+        </div>
+        </main>
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
+</html>
