--- a/hospital/templates/update_cart.html
+++ b/hospital/templates/update_cart.html
@@ -10,7 +10,7 @@
                     {% if form.quantity.errors %}
                         {{ form.quantity(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
-                            {% for error in form.email.errors %}
+                            {% for error in form.quantity.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>
