--- a/hospital/templates/medicines.html
+++ b/hospital/templates/medicines.html
@@ -139,9 +139,9 @@
             {% for page_num in medicines.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
             {% if page_num %}
                 {% if medicines.page == page_num %}
-                <a class="btn btn-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
+                </br><a class="btn btn-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
                 {% else %}
-                <a class="btn btn-outline-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
+                </br><a class="btn btn-outline-info mb-4" href="{{ url_for('medicines', disease_type=disease_type, page=page_num) }}">{{ page_num }}</a>
                 {% endif %}
             {% else %}
                 ...
