Updated successfully on 16-05-2020

--- a/hospital/templates/order_history.html
+++ b/hospital/templates/order_history.html
@@ -107,7 +107,7 @@
                 <h3>Our Sidebar</h3>
                 <p class='text-muted'>Check these out!
                 <ul class="list-group">
-                    <li class="list-group-item list-group-item-light">24x7 Ambulance</li>
+                    <li class="list-group-item list-group-item-light"><a href="{{ url_for('necessary_information') }}">Necessary information</a></li>
                     <li class="list-group-item list-group-item-light">Announcements</li>
                     <li class="list-group-item list-group-item-light">Calendars</li>
                     <li class="list-group-item list-group-item-light">etc</li>
