--- a/hospital/templates/important_blood_bank_contacts.html
+++ b/hospital/templates/important_blood_bank_contacts.html
@@ -74,33 +74,17 @@
                 </div>
               {% endfor %}
             {% endif %}
-          {% endwith %}        
-          <h3 class="mb-4">Your order details</h3>   
-            <table>
-                <tr>
-                  <th>Medicine Name</th>
-                  <th>Quantity</th>
-                  <th>Total Price</th>
-                </tr>
-            {% for item in items.items %}
-                <tr>
-                    <td>{{ item.medicine_name }}</td>
-                    <td>{{ item.quantity }}</td>
-                    <td>{{ item.total_price }}</td>
-                </tr>
-            {% endfor %}
-            </table>    
-            {% for page_num in items.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-            {% if page_num %}
-                {% if items.page == page_num %}
-                </br><a class="btn btn-info mb-4" href="{{ url_for('order_details', order_id=order_id, page=page_num) }}">{{ page_num }}</a>
-                {% else %}
-                </br><a class="btn btn-outline-info mb-4" href="{{ url_for('order_details', order_id=order_id, page=page_num) }}">{{ page_num }}</a>
-                {% endif %}
-            {% else %}
-                ...
-            {% endif %}
-            {% endfor %}
+          {% endwith %}       
+            <h3 class="mb-4">Blood banks in Kolkata and their contact numbers</h3> 
+            </br> <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('important_hospital_contacts') }}">Hospital Contacts</a> </br>
+          <table>
+              <tr>
+                <th>Serial No</th>
+                <th>Blood bank Name</th>
+                <th>Address</th>
+                <th>Contact number</th>
+              </tr>
+          </table>
             </div>
             <div class="col-md-4">
             <div class="content-section">
