Updated successfully on 16-05-2020

--- a/hospital/templates/important_blood_bank_contacts.html
+++ b/hospital/templates/important_blood_bank_contacts.html
@@ -74,9 +74,9 @@
                 </div>
               {% endfor %}
             {% endif %}
-          {% endwith %}       
+          {% endwith %} 
+          <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('important_hospital_contacts') }}">Hospital Contacts</a> </br></br>   
             <h3 class="mb-4">Blood banks in Kolkata and their contact numbers</h3> 
-            </br> <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('important_hospital_contacts') }}">Hospital Contacts</a> </br>
             <table>
               <tr>
                <th>Serial No</th>
