--- a/hospital/templates/important_hospital_contacts.html
+++ b/hospital/templates/important_hospital_contacts.html
@@ -77,7 +77,7 @@
           {% endwith %} 
           <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('nearby_hospital_map') }}">Hospitals near me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('important_blood_bank_contacts') }}">Blood Bank Contacts</a>      
-              </br><h3 class="mb-4">Hospitals in Kolkata and their contact numbers</h3>   
+              </br> </br><h3 class="mb-4">Hospitals in Kolkata and their contact numbers</h3>   
           <table>
               <tr>
                 <th>Serial No</th>
