--- a/hospital/templates/bloodbank_map.html
+++ b/hospital/templates/bloodbank_map.html
@@ -94,14 +94,15 @@
       </div>
     </main>
     {% if current_user.is_authenticated %}
-    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('nearby_bloodbank_map') }}">Blood Banks near me</a>
+    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('nearby_hospital_map') }}">Hospitals near me</a>
     </br><a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('nearby_medical_stores_map') }}">Pharmacy near me</a>
+  </br>
     <div id="map_of_my_location"></div>
     <script>
       let lat;
       let lon;
       let token = "6026ec9d-98f6-4aa2-bffe-77d65aee8343";
-      let key = "hospital";
+      let key = "blood bank";
       let p_lat = [];
       let p_lng = [];
       navigator.geolocation.getCurrentPosition(function (position) {
