--- a/hospital/templates/medical_store_map.html
+++ b/hospital/templates/medical_store_map.html
@@ -94,6 +94,9 @@
       </div>
     </main>
     {% if current_user.is_authenticated %}
+    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('nearby_hospital_map') }}">Hospitals near me</a>
+    </br><a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('nearby_bloodbank_map') }}">Blood Banks near me</a>
+  </br>
     <div id="map_of_my_location"></div>
     <script>
       let lat;
